[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'tvm_executor'
version = '1.16.99'

[dependencies]
failure = '0.1.6'
lazy_static = '1.4'
log = '0.4'
tvm_block = { git = 'https://github.com/tvmlabs/tvm-block.git', branch = "main" }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-types.git', branch = "main" }
tvm_vm = { git = 'https://github.com/tvmlabs/tvm-vm.git', branch = "main" }

[features]
signature_with_id = [ 'tvm_block/signature_with_id', 'tvm_vm/signature_with_id' ]

[[bench]]
harness = false
name = 'benchmarks'

[lib]
bench = false

[profile]
